bindings/py/cffi-dggal.h

typedef eC_Instance eC_DGGRS;
typedef uint64 eC_DGGRSZone;
typedef eC_Instance eC_DGGSJSONGrid;
typedef eC_Instance eC_DGGSJSONShape;
typedef struct eC_GeoExtent eC_GeoExtent;
typedef eC_Instance eC_JSONSchema;
extern int (* DGGRS_getLevelFromPixelsAndExtent)(eC_DGGRS __this, const eC_GeoExtent * extent, const eC_Point * pixels, int relativeDepth);
extern int (* DGGRS_getLevelFromRefZoneArea)(eC_DGGRS __this, double metersSquared);
extern int (* DGGRS_getLevelFromScaleDenominator)(eC_DGGRS __this, double scaleDenominator, int relativeDepth, double mmPerPixel);
extern int DGGRS_getMaxChildren_vTblID;
extern eC_Method * method_DGGRS_getMaxChildren;
extern int DGGRS_getMaxDGGRSZoneLevel_vTblID;
extern eC_Method * method_DGGRS_getMaxDGGRSZoneLevel;
extern int (* DGGRS_getMaxDepth)(eC_DGGRS __this);
extern int DGGRS_getMaxNeighbors_vTblID;
extern eC_Method * method_DGGRS_getMaxNeighbors;
extern int DGGRS_getMaxParents_vTblID;
extern eC_Method * method_DGGRS_getMaxParents;
extern double (* DGGRS_getMetersPerSubZoneFromLevel)(eC_DGGRS __this, int parentLevel, int relativeDepth);
extern double (* DGGRS_getRefZoneArea)(eC_DGGRS __this, int level);
extern int DGGRS_getRefinementRatio_vTblID;
extern eC_Method * method_DGGRS_getRefinementRatio;
extern double (* DGGRS_getScaleDenominatorFromLevel)(eC_DGGRS __this, int parentLevel, int relativeDepth, double mmPerPixel);
extern int DGGRS_getSubZoneAtIndex_vTblID;
extern eC_Method * method_DGGRS_getSubZoneAtIndex;
extern int DGGRS_getSubZoneCRSCentroids_vTblID;
extern eC_Method * method_DGGRS_getSubZoneCRSCentroids;
extern int DGGRS_getSubZoneIndex_vTblID;
extern eC_Method * method_DGGRS_getSubZoneIndex;
extern int DGGRS_getSubZoneWGS84Centroids_vTblID;
extern eC_Method * method_DGGRS_getSubZoneWGS84Centroids;
extern int DGGRS_getSubZones_vTblID;
extern eC_Method * method_DGGRS_getSubZones;
extern int DGGRS_getZoneArea_vTblID;
extern eC_Method * method_DGGRS_getZoneArea;
extern int DGGRS_getZoneCRSCentroid_vTblID;
extern eC_Method * method_DGGRS_getZoneCRSCentroid;
extern int DGGRS_getZoneCRSExtent_vTblID;
extern eC_Method * method_DGGRS_getZoneCRSExtent;
extern int DGGRS_getZoneCRSVertices_vTblID;
extern eC_Method * method_DGGRS_getZoneCRSVertices;
extern int DGGRS_getZoneCentroidChild_vTblID;
extern eC_Method * method_DGGRS_getZoneCentroidChild;
extern int DGGRS_getZoneCentroidParent_vTblID;
extern eC_Method * method_DGGRS_getZoneCentroidParent;
extern int DGGRS_getZoneChildren_vTblID;
extern eC_Method * method_DGGRS_getZoneChildren;
extern int DGGRS_getZoneFromCRSCentroid_vTblID;
extern eC_Method * method_DGGRS_getZoneFromCRSCentroid;
extern int DGGRS_getZoneFromTextID_vTblID;
extern eC_Method * method_DGGRS_getZoneFromTextID;
extern int DGGRS_getZoneFromWGS84Centroid_vTblID;
extern eC_Method * method_DGGRS_getZoneFromWGS84Centroid;
extern int DGGRS_getZoneLevel_vTblID;
extern eC_Method * method_DGGRS_getZoneLevel;
extern int DGGRS_getZoneNeighbors_vTblID;
extern eC_Method * method_DGGRS_getZoneNeighbors;
extern int DGGRS_getZoneParents_vTblID;
extern eC_Method * method_DGGRS_getZoneParents;
extern int DGGRS_getZoneRefinedCRSVertices_vTblID;
extern eC_Method * method_DGGRS_getZoneRefinedCRSVertices;
extern int DGGRS_getZoneRefinedWGS84Vertices_vTblID;
extern eC_Method * method_DGGRS_getZoneRefinedWGS84Vertices;
extern int DGGRS_getZoneTextID_vTblID;
extern eC_Method * method_DGGRS_getZoneTextID;
extern int DGGRS_getZoneWGS84Centroid_vTblID;
extern eC_Method * method_DGGRS_getZoneWGS84Centroid;
extern int DGGRS_getZoneWGS84Extent_vTblID;
extern eC_Method * method_DGGRS_getZoneWGS84Extent;
extern int DGGRS_getZoneWGS84ExtentApproximate_vTblID;
extern eC_Method * method_DGGRS_getZoneWGS84ExtentApproximate;
extern int DGGRS_getZoneWGS84Vertices_vTblID;
extern eC_Method * method_DGGRS_getZoneWGS84Vertices;
extern eC_bool (* DGGRS_isZoneAncestorOf)(eC_DGGRS __this, eC_DGGRSZone ancestor, eC_DGGRSZone descendant, int maxDepth);
extern int DGGRS_isZoneCentroidChild_vTblID;
extern eC_Method * method_DGGRS_isZoneCentroidChild;
extern eC_bool (* DGGRS_isZoneContainedIn)(eC_DGGRS __this, eC_DGGRSZone needle, eC_DGGRSZone hayStack);
extern eC_bool (* DGGRS_isZoneDescendantOf)(eC_DGGRS __this, eC_DGGRSZone descendant, eC_DGGRSZone ancestor, int maxDepth);
extern eC_bool (* DGGRS_isZoneImmediateChildOf)(eC_DGGRS __this, eC_DGGRSZone child, eC_DGGRSZone parent);
extern eC_bool (* DGGRS_isZoneImmediateParentOf)(eC_DGGRS __this, eC_DGGRSZone parent, eC_DGGRSZone child);
extern int DGGRS_listZones_vTblID;
extern eC_Method * method_DGGRS_listZones;
extern int DGGRS_zoneHasSubZone_vTblID;
extern eC_Method * method_DGGRS_zoneHasSubZone;
struct class_members_DGGSJSON
{
   eC_String dggrs;
   eC_String zoneId;
   eC_Array depths;
   eC_String representedValue;
   eC_JSONSchema schema;
   eC_Array dimensions;
   eC_Map values;
};
struct class_members_DGGSJSONDepth
{
   int depth;
   eC_DGGSJSONShape shape;
   eC_Array data;
};
struct class_members_DGGSJSONDimension
{
   eC_String name;
   eC_Array interval;
   eC_DGGSJSONGrid grid;
   eC_String definition;
   eC_String unit;
   eC_String unitLang;
};
struct eC_GeoExtent
{
   eC_GeoPoint ll;
   eC_GeoPoint ur;
};