bindings/c_fn/dggal_c.h

// Data Types
struct DGGRS;
typedef struct DGGRS * DGGRS;
typedef uint64_t DGGRSZone;
typedef char * String;
struct GeoPoint
{
   Radians lat, lon;
};
typedef struct GeoPoint GeoPoint;
struct GeoExtent
{
   GeoPoint ll, ur;
};
typedef struct GeoExtent GeoExtent;