bindings/rust/dggal_cffi.rs

/*unsafe*/ extern "C" {
    pub static mut DGGRS_getLevelFromPixelsAndExtent: ::std::option::Option<
        /*unsafe*/ extern "C" fn(
            __this: DGGRS,
            extent: *const GeoExtent,
            pixels: *const Point,
            relativeDepth: ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getLevelFromRefZoneArea: ::std::option::Option<
        /*unsafe*/ extern "C" fn(__this: DGGRS, metersSquared: f64) -> ::std::os::raw::c_int,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getLevelFromScaleDenominator: ::std::option::Option<
        /*unsafe*/ extern "C" fn(
            __this: DGGRS,
            scaleDenominator: f64,
            relativeDepth: ::std::os::raw::c_int,
            mmPerPixel: f64,
        ) -> ::std::os::raw::c_int,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getMaxChildren_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getMaxChildren: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getMaxDGGRSZoneLevel_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getMaxDGGRSZoneLevel: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getMaxDepth:
        ::std::option::Option</*unsafe*/ extern "C" fn(__this: DGGRS) -> ::std::os::raw::c_int>;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getMaxNeighbors_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getMaxNeighbors: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getMaxParents_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getMaxParents: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getMetersPerSubZoneFromLevel: ::std::option::Option<
        /*unsafe*/ extern "C" fn(
            __this: DGGRS,
            parentLevel: ::std::os::raw::c_int,
            relativeDepth: ::std::os::raw::c_int,
        ) -> f64,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getRefZoneArea: ::std::option::Option<
        /*unsafe*/ extern "C" fn(__this: DGGRS, level: ::std::os::raw::c_int) -> f64,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getRefinementRatio_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getRefinementRatio: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getScaleDenominatorFromLevel: ::std::option::Option<
        /*unsafe*/ extern "C" fn(
            __this: DGGRS,
            parentLevel: ::std::os::raw::c_int,
            relativeDepth: ::std::os::raw::c_int,
            mmPerPixel: f64,
        ) -> f64,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getSubZoneAtIndex_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getSubZoneAtIndex: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getSubZoneCRSCentroids_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getSubZoneCRSCentroids: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getSubZoneIndex_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getSubZoneIndex: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getSubZoneWGS84Centroids_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getSubZoneWGS84Centroids: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getSubZones_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getSubZones: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneArea_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneArea: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneCRSCentroid_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneCRSCentroid: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneCRSExtent_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneCRSExtent: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneCRSVertices_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneCRSVertices: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneCentroidChild_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneCentroidChild: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneCentroidParent_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneCentroidParent: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneChildren_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneChildren: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneFromCRSCentroid_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneFromCRSCentroid: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneFromTextID_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneFromTextID: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneFromWGS84Centroid_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneFromWGS84Centroid: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneLevel_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneLevel: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneNeighbors_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneNeighbors: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneParents_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneParents: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneRefinedCRSVertices_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneRefinedCRSVertices: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneRefinedWGS84Vertices_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneRefinedWGS84Vertices: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneTextID_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneTextID: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneWGS84Centroid_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneWGS84Centroid: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneWGS84Extent_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneWGS84Extent: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneWGS84ExtentApproximate_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneWGS84ExtentApproximate: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_getZoneWGS84Vertices_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_getZoneWGS84Vertices: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_isZoneAncestorOf: ::std::option::Option<
        /*unsafe*/ extern "C" fn(
            __this: DGGRS,
            ancestor: DGGRSZone,
            descendant: DGGRSZone,
            maxDepth: ::std::os::raw::c_int,
        ) -> bool_,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_isZoneCentroidChild_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_isZoneCentroidChild: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_isZoneContainedIn: ::std::option::Option<
        /*unsafe*/ extern "C" fn(__this: DGGRS, needle: DGGRSZone, hayStack: DGGRSZone) -> bool_,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_isZoneDescendantOf: ::std::option::Option<
        /*unsafe*/ extern "C" fn(
            __this: DGGRS,
            descendant: DGGRSZone,
            ancestor: DGGRSZone,
            maxDepth: ::std::os::raw::c_int,
        ) -> bool_,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_isZoneImmediateChildOf: ::std::option::Option<
        /*unsafe*/ extern "C" fn(__this: DGGRS, child: DGGRSZone, parent: DGGRSZone) -> bool_,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_isZoneImmediateParentOf: ::std::option::Option<
        /*unsafe*/ extern "C" fn(__this: DGGRS, parent: DGGRSZone, child: DGGRSZone) -> bool_,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_listZones_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_listZones: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut DGGRS_zoneHasSubZone_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_DGGRS_zoneHasSubZone: *mut Method;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct class_members_DGGSJSON {
    pub dggrs: String,
    pub zoneId: String,
    pub depths: Array,
    pub representedValue: String,
    pub schema: JSONSchema,
    pub dimensions: Array,
    pub values: Map,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of class_members_DGGSJSON"][::std::mem::size_of::<class_members_DGGSJSON>() - 56usize];
    ["Alignment of class_members_DGGSJSON"]
        [::std::mem::align_of::<class_members_DGGSJSON>() - 8usize];
    ["Offset of field: class_members_DGGSJSON::dggrs"]
        [::std::mem::offset_of!(class_members_DGGSJSON, dggrs) - 0usize];
    ["Offset of field: class_members_DGGSJSON::zoneId"]
        [::std::mem::offset_of!(class_members_DGGSJSON, zoneId) - 8usize];
    ["Offset of field: class_members_DGGSJSON::depths"]
        [::std::mem::offset_of!(class_members_DGGSJSON, depths) - 16usize];
    ["Offset of field: class_members_DGGSJSON::representedValue"]
        [::std::mem::offset_of!(class_members_DGGSJSON, representedValue) - 24usize];
    ["Offset of field: class_members_DGGSJSON::schema"]
        [::std::mem::offset_of!(class_members_DGGSJSON, schema) - 32usize];
    ["Offset of field: class_members_DGGSJSON::dimensions"]
        [::std::mem::offset_of!(class_members_DGGSJSON, dimensions) - 40usize];
    ["Offset of field: class_members_DGGSJSON::values"]
        [::std::mem::offset_of!(class_members_DGGSJSON, values) - 48usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct class_members_DGGSJSONDepth {
    pub depth: ::std::os::raw::c_int,
    pub shape: DGGSJSONShape,
    pub data: Array,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of class_members_DGGSJSONDepth"]
        [::std::mem::size_of::<class_members_DGGSJSONDepth>() - 24usize];
    ["Alignment of class_members_DGGSJSONDepth"]
        [::std::mem::align_of::<class_members_DGGSJSONDepth>() - 8usize];
    ["Offset of field: class_members_DGGSJSONDepth::depth"]
        [::std::mem::offset_of!(class_members_DGGSJSONDepth, depth) - 0usize];
    ["Offset of field: class_members_DGGSJSONDepth::shape"]
        [::std::mem::offset_of!(class_members_DGGSJSONDepth, shape) - 8usize];
    ["Offset of field: class_members_DGGSJSONDepth::data"]
        [::std::mem::offset_of!(class_members_DGGSJSONDepth, data) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct class_members_DGGSJSONDimension {
    pub name: String,
    pub interval: Array,
    pub grid: DGGSJSONGrid,
    pub definition: String,
    pub unit: String,
    pub unitLang: String,
}
